feat: 기본 기능 구현 완료

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
       <section aria-labelledby="graph-title">
         <h2 id="graph-title">1. 그래프</h2>
         <div class="bar-chart">
-          <div class="bar" style="height: 75px"></div>
-          <div class="bar" style="height: 20px"></div>
-          <div class="bar" style="height: 80px"></div>
-          <div class="bar" style="height: 100px"></div>
-          <div class="bar" style="height: 70px"></div>
+          <!-- JS로 그래프 막대 추가됨 -->
         </div>
       </section>
 
@@ -57,7 +53,7 @@
       <section aria-labelledby="json-edit-title">
         <h2 id="json-edit-title">4. 값 고급 편집</h2>
         <form id="json-form">
-          <textarea name="json" rows="10" cols="50" required></textarea>
+          <textarea name="json" rows="20" required></textarea>
           <button type="submit">Apply</button>
         </form>
       </section>
