--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla JS Project</title>
+    <title>Vanilla JS Chart Editor</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1 id="title">아이엠파인 SD팀 지원자 이재성</h1>
     <main>
-      <!-- 1. 그래프 영역 -->
       <section aria-labelledby="graph-title">
         <h2 id="graph-title">1. 그래프</h2>
-        <div class="bar-chart">
-          <!-- JS로 그래프 막대 추가됨 -->
+        <div class="chart-container">
+          <div class="graph-box">
+            <div class="bars"></div>
+          </div>
         </div>
       </section>
 
-      <!-- 2. 값 편집 (테이블) -->
       <section aria-labelledby="table-edit-title">
         <h2 id="table-edit-title">2. 값 편집</h2>
         <table>
@@ -28,28 +28,20 @@
               <th>삭제</th>
             </tr>
           </thead>
-          <tbody id="data-table-body">
-            <!-- JS로 행 추가됨 -->
-          </tbody>
+          <tbody id="data-table-body"></tbody>
         </table>
         <button id="apply-table">Apply</button>
       </section>
 
-      <!-- 3. 값 추가 -->
       <section aria-labelledby="add-value-title">
         <h2 id="add-value-title">3. 값 추가</h2>
         <form id="add-form">
-          <label>
-            <input type="text" name="id" placeholder="ID" required />
-          </label>
-          <label>
-            <input type="number" name="value" placeholder="VALUE" required />
-          </label>
+          <label><input type="text" name="id" placeholder="ID" required /></label>
+          <label><input type="number" name="value" placeholder="VALUE" required /></label>
           <button type="submit">Add</button>
         </form>
       </section>
 
-      <!-- 4. JSON 고급 편집 -->
       <section aria-labelledby="json-edit-title">
         <h2 id="json-edit-title">4. 값 고급 편집</h2>
         <form id="json-form">
@@ -58,7 +50,6 @@
         </form>
       </section>
     </main>
-
     <script src="main.js"></script>
   </body>
 </html>
