--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
   </head>
   <body>
     <h1 id="title">아이엠파인 SD팀 지원자 이재성</h1>
+
     <main>
+      <!-- 그래프 영역 -->
       <section aria-labelledby="graph-title">
         <h2 id="graph-title">1. 그래프</h2>
         <div class="chart-container">
           <div class="graph-box">
-            <div class="bars"></div>
+            <div class="bars">
+              <!-- JS에서 동적으로 bar, label, y-tick을 렌더링 -->
+            </div>
           </div>
         </div>
       </section>
 
+      <!-- 값 편집 영역 -->
       <section aria-labelledby="table-edit-title">
         <h2 id="table-edit-title">2. 값 편집</h2>
         <table>
@@ -25,23 +30,31 @@
             <tr>
               <th>ID</th>
               <th>값</th>
-              <th>삭제</th>
+              <th>기타</th>
             </tr>
           </thead>
-          <tbody id="data-table-body"></tbody>
+          <tbody id="data-table-body">
+            <!-- JS에서 <tr> 목록 렌더링 -->
+          </tbody>
         </table>
         <button id="apply-table">Apply</button>
       </section>
 
+      <!-- 값 추가 영역 -->
       <section aria-labelledby="add-value-title">
         <h2 id="add-value-title">3. 값 추가</h2>
         <form id="add-form">
-          <label><input type="text" name="id" placeholder="ID" required /></label>
-          <label><input type="number" name="value" placeholder="VALUE" required /></label>
+          <label>
+            <input type="text" name="id" placeholder="ID" required />
+          </label>
+          <label>
+            <input type="number" name="value" placeholder="VALUE" required />
+          </label>
           <button type="submit">Add</button>
         </form>
       </section>
 
+      <!-- 값 고급 편집 영역 -->
       <section aria-labelledby="json-edit-title">
         <h2 id="json-edit-title">4. 값 고급 편집</h2>
         <form id="json-form">
@@ -50,6 +63,7 @@
         </form>
       </section>
     </main>
+
     <script src="main.js"></script>
   </body>
 </html>
