--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
         <h2 id="json-edit-title">4. 값 고급 편집</h2>
         <form id="json-form">
           <textarea name="json" rows="20" required></textarea>
-          <button type="submit">Apply</button>
+          <div id="json-errors" class="error-box"></div>
+          <div class="json-buttons">
+            <button type="submit">Apply</button>
+            <button type="button" id="format-json">자동 들여쓰기</button>
+            <button type="button" id="restore-json">이전 상태로 되돌리기</button>
+          </div>
         </form>
       </section>
     </main>
