refactor: JSON 유효성검사, 주석 및 변수명 개선

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <tr>
               <th>ID</th>
               <th>값</th>
-              <th>기타</th>
+              <th></th>
             </tr>
           </thead>
           <tbody id="data-table-body">
@@ -59,7 +59,7 @@
         <h2 id="json-edit-title">4. 값 고급 편집</h2>
         <form id="json-form">
           <textarea name="json" rows="20" required></textarea>
-          <div id="json-errors" class="error-box"></div>
+          <div id="json-errors" class="error-box" aria-live="polite"></div>
           <div class="json-buttons">
             <button type="submit">Apply</button>
             <button type="button" id="format-json">자동 들여쓰기</button>
